# KnowledgeBaseService

./: AGENTS.md  CLAUDE.md
api/: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml
api/scripts/: generate_token.py
api/src/: app.py  auth.py  logger.py
api/src/routes/: obsidian.py
api/systemd/: knowledge-base-api.service  knowledgebaseservice-api.service
api/tests/unit/: test_auth.py  test_file.py  test_generate_token.py  test_health.py  test_logger.py  test_matches.py
db-models/: AGENTS.md  alembic.ini  pyproject.toml
db-models/src/db_models/: __init__.py  database.py
db-models/src/db_models/alembic/: env.py
db-models/src/db_models/alembic/versions/: c45ad2d6dfd9_initial_tables.py
db-models/src/db_models/models/: __init__.py  api_keys.py  markdown_file_embeddings.py  markdown_files.py
docs/: HOW_TO_USE_KNOWLEDGE_BASE_API.md  KNOWLEDGE_BASE_SERVICE_SETUP.md  OBSIDIAN_SYNC_GUIDE_FOR_AGENTS.md  OBSIDIAN_SYNC_OWNERSHIP_FIX.md  WORKER_PYTHON_DEPLOYMENT_LOG.md
docs/api-documentation/: API_REFERENCE.md
docs/api-documentation/endpoints/: health.md  obsidian.md
docs/requirements/: FIRST_REQUIREMENTS.md  PYTHON_TEST_OPTIONS.md  TODO_API_20260402.md  TODO_DB_MODELS_20260402.md  TODO_WORKER_PYTHON_20260402.md
worker-python/: .env.example  AGENTS.md  Makefile  main.py  pyproject.toml
worker-python/src/: daily_files.py  embedder.py  logger.py  main.py  scanner.py  sync.py
worker-python/systemd/: knowledge-base-worker.service  knowledge-base-worker.timer  knowledgebaseservice-worker-python.service  knowledgebaseservice-worker-python.timer
worker-python/tests/unit/: test_daily_files.py  test_embedder.py  test_logger.py  test_main.py  test_scanner.py  test_sync.py
