[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "db-models"
version = "0.1.0"
description = "Shared SQLAlchemy models for knowledge-base-service"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "alembic>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]
